# meow_rust

./: .env.example  .gitignore  Cargo.toml
src/: lib.rs
src/circuits/: freivalds.rs  meow.rs  mod.rs
src/circuits/gadgets/: mod.rs
src/circuits/gadgets/linear_code/: constraints.rs  mod.rs
src/circuits/gadgets/linear_code/reed_solomon/: constraints.rs  mod.rs
src/circuits/gadgets/lookup/: constraints.rs  mod.rs
src/circuits/gadgets/lookup/logup/: constraints.rs  mod.rs
src/crypto/: cp_link.rs  hash.rs  merkle.rs  mod.rs  pedersen.rs
src/protocol/: context.rs  errors.rs  mod.rs  prover.rs  transcript.rs  types.rs  verifier.rs
src/utils/: benchmark_io.rs  env.rs  mod.rs
