[package]
name = "meow_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-bls12-381 = { version = "0.5", optional = true }
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-poly = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }
csv = "1.3.1"
rand = "0.8.5"
sha3 = "0.10.8"
ndarray = "0.17.2"
rayon = "1.10.0"

[lib]
name = "meow_rust"
path = "src/lib.rs"

[features]
default = ["bn254", "parallel"]
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ndarray/rayon",
]
print-trace = ["ark-std/print-trace"]
r1cs = []
std = []
bn254 = []
bls12-381 = ["dep:ark-bls12-381"]
